force-app/main/default/objects/Additional_Fund__c/Additional_Fund__c.object-meta.xml
<CustomObject>
    <label>Additional Fund</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>