force-app/main/default/objects/Additional_Fund__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>The fund amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>