force-app/main/default/objects/Additional_Fund__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>Primary unique identifier for an additional funds entity.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>