force-app/main/default/objects/Additional_Fund__c/fields/Loan_Application_Financial__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Financial__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Linking Loan Application Financial with Funds Purpose objects</description>
    <label>Loan Application Financial</label>
    <referenceTo>LoanApplicationFinancial</referenceTo>
    <relationshipLabel>Additional Funds</relationshipLabel>
    <relationshipName>Additional_Funds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>