force-app/main/default/objects/Additional_Fund__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>When Other is selected, customer will provide the reason.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>