force-app/main/default/objects/Additional_Fund__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Loan</complianceGroup>
    <description>The purpose of the funds.</description>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LENDING_PURPOSE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_REFINANCE</fullName>
                <label>Refinance</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_ALTERATIONS_DWELLING_EXISTING</fullName>
                <label>Non-structural alterations or additions</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_NEW</fullName>
                <label>New car</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_USED</fullName>
                <label>Used car</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_VEHICLE_OTHER</fullName>
                <label>Other vehicle type</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_MOTOR_CYCLE</fullName>
                <label>Motorcycle and scooters</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_BOAT_CARAVAN_TRAILER</fullName>
                <label>Boats, caravans and trailers</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_HOUSEHOLD_GOODS</fullName>
                <label>Household items</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_HOLIDAY_TRAVEL</fullName>
                <label>Travel</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_INVESTMENT</fullName>
                <label>Personal investments, shares, bonds</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_EDUCATION</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_WEDDING</fullName>
                <label>Wedding</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_LEGAL</fullName>
                <label>Legal fees</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_MEDICAL</fullName>
                <label>Health</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_MOTOR_VEHICLE_EXPENSES</fullName>
                <label>Vehicle costs</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER_PROPERTY_MAINTENANCE</fullName>
                <label>Maintenance, repairs and pools</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_PERSONAL_OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_ALTERATIONS_DWELLING_EXISTING_INVESTOR</fullName>
                <label>Non-Structural alterations or additions - Investment</label>
            </value>
            <value>
                <fullName>LENDING_PURPOSE_REFINANCE_INVESTOR</fullName>
                <label>Refinance - Investor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>